# TiwutOS

./: Google AI Studio.url  LICENSE  README.md  index.html
1.4/: boot.asm  build.sh  drivers.cpp  keyboard.h  os.h  utils.cpp  utils.h
C&CPP/v1.2/: kernel.c  kernel.h
C&CPP/v1.3/: boot.asm  interpreter.c
C&CPP/v1.4/: io.cpp
C&CPP/v1.5/: apps.cpp  io.h  kernel.cpp  kernel.h  link.ld
Rust/v1.6/: Cargo.toml  build.rs
Rust/v1.6/.cargo/: config.toml
Rust/v1.6/src/: main.rs  style.c
Rust/v1.6/user_space/: app.cpp
v1.0/: Hello Wold.iso  boot.asm
v1.1/: boot.asm  kernel.c  link.ld
v1.1/isodir/boot/grub/: grub.cfg
v1.2/: boot.asm  drivers.c  link.ld
v1.2/isodir/boot/grub/: grub.cfg
v1.3/: kernel.c  link.ld
v1.3-desktop-env/: drivers.c  kernel.h  test.py  utils.c
v1.3-desktop-env/isodir/boot/grub/: grub.cfg
v1.4/: graphics.cpp  graphics.h  kernel.cpp  keyboard.cpp  ports.h  screen.cpp  screen.h  types.h
v1.4/isodir/boot/grub/: grub.cfg
v1.5/: build.sh  gui.cpp  gui.h
v1.5/isodir/boot/grub/: grub.cfg
